# sonic-ws

./: .gitignore  .npmignore  LICENSE  README.md  build.sh  minify.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
benchmarks/: README.md  package-lock.json  package.json  run.mjs  transport.mjs
bundled/: SonicWS_bundle.js  SonicWS_bundle_release.js  bundle.js  bundle.wasm
docs/: authentication.md  backpressure.md  defaults.md  licensing.md  protocol.md  tooling.md
docs/py/: README.md  client.md  getting-started.md  middleware.md  packets.md  runtime.md  server.md
docs/ts/: README.md  client.md  getting-started.md  middleware.md  packets.md  runtime.md  server.md
examples/: README.md
examples/3d-world/: README.md  package-lock.json  package.json  server.js
examples/3d-world/public/: index.html  physics.js  script.js  style.css
examples/auth-jwt/: README.md
examples/rooms/: README.md
examples/rpc/: README.md
projects/core/: Cargo.toml  README.md  build.rs
projects/core/fuzz/: Cargo.toml
projects/core/fuzz/fuzz_targets/: decode_packet.rs  decode_schema.rs
projects/core/src/: error.rs  lib.rs  packet.rs  packet_type.rs  schema.rs  value.rs
projects/core/src/codec/: decode.rs  encode.rs  size.rs  validate.rs
projects/core/src/compression/: gzip.rs
projects/core/src/enums/: decode.rs  encode.rs
projects/core/src/ffi/: mod.rs  node.rs  python.rs  wasm.rs
projects/core/src/object/: decode.rs  validate.rs
projects/core/src/primitives/: bools.rs  bytes.rs  ints.rs  strings.rs  zigzag.rs
projects/core/src/wire/: mod.rs  writer.rs
projects/core/tests/: compatibility_matrix.rs  enums.rs  golden_corpus.rs  huffman.rs  object_packets.rs  packet_modes.rs
projects/core/tests/typescript/: package-lock.json  test.ts
projects/py/: MANIFEST.in  pyproject.toml  setup.py
projects/py/src/sonic_ws/: __init__.py  _core.py  adapter.py  client.py  codec.py  connection.py  control.py  debug.py  enums.py  manifest.py  metrics.py  middleware.py  packet_logger.py  packet_type.py  packets.py  schema_validation.py  server.py  variant_permutation.py
projects/py/tests/: test_codec.py  test_compat.py  test_conformance.py  test_features.py  test_integration.py  test_parity.py  test_runtime.py  test_security.py
projects/rust/: Cargo.toml  README.md
projects/rust/src/: connection.rs  control.rs  error.rs  json.rs  lib.rs  listener.rs  packet.rs  registry.rs  server.rs  variant_permutation.rs
projects/rust/tests/: packet_api.rs  runtime.rs  test_compat.rs
projects/ts/: .npmignore  minify.mjs  package-files.mjs  package.json  tsconfig.json  webpack.config.js
projects/ts/src/: index.ts  version.ts
projects/ts/src/native/: LICENSE  wrapper.ts
projects/ts/src/ws/: Connection.ts  PacketProcessor.ts
projects/ts/tests/: test_cli.mjs  test_compat.mjs  test_conformance.mjs  test_malformed.mjs  test_node.mjs  test_recovery.mjs  test_types.ts  test_web.mjs
protocol/: golden-vectors.json
release/: SonicWS_bundle.js  bundle.js
src/: index.ts  version.ts
src/core/: Cargo.toml
src/core/benches/: decode.rs  encode.rs
src/core/fuzz/fuzz_targets/: decode_packet.rs
src/core/src/batching/: decode.rs  encode.rs  mod.rs
src/core/src/codec/: decode.rs  encode.rs  mod.rs  validate.rs
src/core/src/compression/: gzip.rs  mod.rs
src/core/src/enums/: enum_package.rs  mod.rs
src/core/src/ffi/: c_api.rs  mod.rs  node.rs  python.rs  wasm.rs
src/core/src/object/: encode.rs  mod.rs
src/core/src/primitives/: floats.rs  hex.rs  huffman.rs  mod.rs  varint.rs
src/core/src/wire/: reader.rs
src/core/tests/: batching.rs  bools.rs  invalid_packets.rs  packet_types.rs  primitives.rs  roundtrip.rs  strings.rs  varint.rs
src/core/tests/typescript/: package.json  test.ts
src/py/: README.md  pyproject.toml  setup.py
src/py/sonic_ws/: _core.py  codec.py  jsonutil.py  packet_type.py  server.py
src/py/tests/: test_codec.py  test_compat.py  test_integration.py  test_parity.py
src/ts/: index.ts
src/ts/native/: wrapper.ts
src/ts/tests/: test_compat.mjs  test_node.mjs
src/ts/ws/: Connection.ts
src/ts/ws/debug/: DebugServer.ts
src/ts/ws/packets/: Packets.ts
src/ts/ws/server/: SonicWSServer.ts
src/ts/ws/util/: BufferUtil.ts
src/ws/: Connection.ts  KeyHolder.ts  PacketProcessor.ts  SonicWS.ts  SonicWSClient.ts  SonicWSServer.ts
src/ws/client/: SonicWS.ts
src/ws/client/browser/: ClientBrowser.ts
src/ws/client/core/: ClientCore.ts
src/ws/client/node/: ClientNode.ts
src/ws/debug/: DebugClient.ts  DebugServer.ts
src/ws/enums/: EnumHandler.ts  EnumType.ts
src/ws/packets/: PacketListener.ts  PacketProcessors.ts  PacketType.ts  Packets.ts
src/ws/server/: SonicWSConnection.ts  SonicWSServer.ts
src/ws/util/: ArrayUtil.ts  BatchHelper.ts  BufferUtil.ts  CodePointUtil.ts  KeyHolder.ts  PacketHolder.ts  PacketUtils.ts  StringUtil.ts
src/ws/util/enums/: EnumHandler.ts  EnumType.ts
src/ws/util/packets/: BatchHelper.ts  CodePointUtil.ts  CompressionUtil.ts  HashUtil.ts  JSONUtil.ts  PacketHolder.ts  (+2 more)
src/ws/utl/: CodePointUtil.ts
strix_runs/sonic-ws_5eb9/: run.json
strix_runs/sonic-ws_7c2a/: run.json
strix_runs/sonic-ws_a311/: run.json
strix_runs/sonic-ws_ceda/: run.json
strix_runs/src_96f9/: run.json
tests/: test_node.mjs  test_web.mjs
(+31 files in other folders)
