[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic-ws"
version = "2.0.1"
description = "Python client and server for the SonicWS binary WebSocket protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["websockets>=14"]

[tool.setuptools]
packages = ["sonic_ws"]

